Changelog
=========

Version TBD
-----------

(released on TBD)

* Make vertical table separator more customizable.
* Add test coverage reports.
* Add ability to pass additional preprocessors when formatting output.
* Don't install tests.tabular_output.
* Add .gitignore
* Coverage for tox tests.
* Style formatted output with Pygments (optional).
* Fix issue where tabulate can't handle ANSI escape codes in default values.


Version 0.1.0
-------------

(released on 2017-05-01)

* Pretty print tabular data using a variety of formatting libraries.