@@ -15,11 +15,12 @@ def test_vertical_table():
         ***************************[ 1. row ]***************************
         name | hello
         age  | 123
+
         ***************************[ 2. row ]***************************
         name | world
         age  | 456
         """)
-    assert expected == vertical_table_adapter.adapter(results, ('name', 'age'))
+    assert expected == "\n".join(vertical_table_adapter.adapter(results, ('name', 'age')))
 
 
 def test_vertical_table_customized():
@@ -30,10 +31,11 @@ def test_vertical_table_customized():
         -[ PERSON 1 ]-----
         name | john
         age  | 47
+
         -[ PERSON 2 ]-----
         name | jill
         age  | 50
         """)
-    assert expected == vertical_table_adapter.adapter(
+    assert expected == "\n".join(vertical_table_adapter.adapter(
         results, ('name', 'age'), sep_title='PERSON {n}',
-        sep_character='-', sep_length=(1, 5))
+        sep_character='-', sep_length=(1, 5)))
