@@ -14,6 +14,7 @@ Version TBD
 * Coverage for tox tests.
 * Style formatted output with Pygments (optional).
 * Fix issue where tabulate can't handle ANSI escape codes in default values.
+* Output as generator for wide and terminaltables output.
 
 
 Version 0.1.0
